[package]
name = "async_logger_log"
version = "0.1.1"
authors = ["stencillogic <stencillogic@gmail.com>"]
edition = "2018"
keywords = ["log", "logging", "logger"]
description = "Asyncronous logging"
repository = "https://github.com/stencillogic/async_logger_log"
readme = "README.md"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["time"]

[dependencies]
async_logger = "0.2.0"
log = {version = "0.4.8", features = ["std"]}
time = {version = "0.2.9", features = ["std"], optional=true}

[dev-dependencies]
regex = "1.3.5"
